fixed #3 . Global options moved into development.ini . Development.dummy isn't needed anymore
git-svn-id: svn://localhost/orphereus/trunk@484 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/development.ini.template
+++ b/development.ini.template
@@ -17,7 +17,7 @@ beaker.session.secret = somesecret
 sqlalchemy.url = mysql://user:passwd@127.0.0.1/database
 sqlalchemy.pool_recycle = 3600
 
-#basic IB settings
+# Basic IB settings
 core.devMode = true
 # We will hash hashSecret by sha512, so no need to have it long
 core.hashSecret = paranoia 
