--- a/development.ini.template
+++ b/development.ini.template
@@ -34,6 +34,7 @@ security.alertPassword= 60J266
 security.refControlEnabled = true
 security.refControlList = anoma.ch,anoma.li,localhost,127.0.0.1
 security.fakeLinks = http://www.youtube.com/watch?v=oHg5SJYRHA0,http://meatspin.com/,http://youtube.com/watch?v=Uqot33mczsw,http://youtube.com/watch?v=dZBU6WzBrX8
+security.obfuscator=http://anonym.to/?
 
 [loggers]
 keys = root, fc
