--- a/development.ini.template
+++ b/development.ini.template
@@ -25,6 +25,8 @@ core.hashSecret = paranoia
 core.baseDomain= anoma.ch
 core.minPassLength = 12
 core.filesPathWeb = http://wut.anoma.ch/img1/
+core.templates = wakaba
+core.styles = photon,burichan,gurochan,futaba
 
 # Security settings
 security.alertEmail = lamo@sms.megafonsib.ru
