antirat-2 userInst initialization moved to OrphieBaseController
git-svn-id: svn://localhost/orphereus/trunk@607 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/development.ini.template
+++ b/development.ini.template
@@ -37,6 +37,7 @@ security.alertPassword= 60J266
 security.refControlEnabled = true
 security.refControlList = anoma.ch,anoma.li,localhost,127.0.0.1
 security.fakeLinks = http://www.youtube.com/watch?v=oHg5SJYRHA0,http://meatspin.com/,http://youtube.com/watch?v=Uqot33mczsw,http://youtube.com/watch?v=dZBU6WzBrX8
+security.badUAs = Wget,Offline Explorer,Web Downloader,WebCopier,WebZIP,Teleport Pro
 security.obfuscator=http://anonym.to/?
 
 [loggers]
