Made security stuff optional
git-svn-id: svn://localhost/orphereus/trunk@635 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/development.ini.template
+++ b/development.ini.template
@@ -27,6 +27,7 @@ core.minPassLength = 12
 core.filesPathWeb = http://wut.anoma.ch/img1/
 core.templates = wakaba
 core.styles = photon,burichan,gurochan,futaba,kusaba
+core.secondaryIndex = false
 
 # Security settings
 security.alertEmail = lamo@sms.megafonsib.ru
@@ -39,6 +40,9 @@ security.refControlList = anoma.ch,anoma.li,localhost,127.0.0.1
 security.fakeLinks = http://www.youtube.com/watch?v=oHg5SJYRHA0,http://meatspin.com/,http://youtube.com/watch?v=Uqot33mczsw,http://youtube.com/watch?v=dZBU6WzBrX8
 security.badUAs = Wget,Offline Explorer,Web Downloader,WebCopier,WebZIP,Teleport Pro
 security.obfuscator=http://anonym.to/?
+security.secureLinks = true
+security.secureText = true
+
 
 [loggers]
 keys = root, fc
