fixed #54 , fixed #55 , refs #28 , fixed #55
git-svn-id: svn://localhost/orphereus/trunk@640 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/development.ini.template
+++ b/development.ini.template
@@ -42,7 +42,8 @@ security.badUAs = Wget,Offline Explorer,Web Downloader,WebCopier,WebZIP,Teleport
 security.obfuscator=http://anonym.to/?
 security.secureLinks = true
 security.secureText = true
-
+security.checkUAs = true
+security.spiderTrap = true
 
 [loggers]
 keys = root, fc
