fixed oekaki bug
git-svn-id: svn://localhost/orphereus/trunk@645 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/development.ini.template
+++ b/development.ini.template
@@ -28,6 +28,7 @@ core.filesPathWeb = http://wut.anoma.ch/img1/
 core.templates = wakaba
 core.styles = photon,burichan,gurochan,futaba,kusaba
 core.secondaryIndex = false
+core.vitalSigns = true
 
 # Security settings
 security.alertEmail = lamo@sms.megafonsib.ru
