Added settings for Anonymous access and posting
git-svn-id: svn://localhost/orphereus/trunk@647 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/development.ini.template
+++ b/development.ini.template
@@ -29,6 +29,11 @@ core.templates = wakaba
 core.styles = photon,burichan,gurochan,futaba,kusaba
 core.secondaryIndex = false
 core.vitalSigns = true
+core.allowPosting = true
+core.allowAnonymous = false
+core.allowAnonymousPosting = false
+core.allowRegistration = false
+
 
 # Security settings
 security.alertEmail = lamo@sms.megafonsib.ru
