--- a/development.ini.template
+++ b/development.ini.template
@@ -48,6 +48,7 @@ security.badUAs = Wget,Offline Explorer,Web Downloader,WebCopier,WebZIP,Teleport
 security.obfuscator=http://anonym.to/?
 security.secureLinks = true
 security.secureText = true
+security.secureTime = true
 security.checkUAs = true
 security.spiderTrap = true
 
