added staticPathWeb parameter
git-svn-id: svn://localhost/orphereus/trunk@675 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/development.ini.template
+++ b/development.ini.template
@@ -24,6 +24,7 @@ core.devMode = true
 core.hashSecret = paranoia 
 core.baseDomain= anoma.ch
 core.minPassLength = 12
+core.staticPathWeb = http://wut.anoma.ch/
 core.filesPathWeb = http://wut.anoma.ch/img1/
 core.templates = wakaba
 core.styles = photon,burichan,gurochan,futaba,kusaba
