fixed #77 , removed empty settings.py , fixed 500 when appending nonexistent tag
git-svn-id: svn://localhost/orphereus/trunk@684 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/development.ini.template
+++ b/development.ini.template
@@ -54,6 +54,9 @@ security.checkUAs = true
 security.spiderTrap = true
 security.interestingNumbers = true
 security.useAnalBarriering = true
+security.enableFinalAnonymity = true
+security.finalAHoursDelay = 24 
+security.hlAnonymizedPosts = true
 
 [loggers]
 keys = root, fc
