added config parameter for uploads path
git-svn-id: svn://localhost/orphereus/trunk@712 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/development.ini.template
+++ b/development.ini.template
@@ -21,9 +21,10 @@ sqlalchemy.encoding=utf-8
 # Basic IB settings
 core.devMode = true
 # We will hash hashSecret by sha512, so no need to have it long
-core.hashSecret = paranoia 
+core.hashSecret = smallSecret 
 core.baseDomain= anoma.ch
 core.minPassLength = 12
+core.uploadPath = /var/OrphieUploads/
 core.staticPathWeb = http://wut.anoma.ch/
 core.filesPathWeb = http://wut.anoma.ch/img1/
 core.templates = wakaba
