--- a/development.ini.template
+++ b/development.ini.template
@@ -36,7 +36,7 @@ core.allowPosting = true
 core.allowAnonymous = false
 core.allowAnonymousPosting = false
 core.allowRegistration = false
-
+core.statsCacheTime = 180
 
 # Security settings
 security.alertEmail = lamo@sms.megafonsib.ru
