fixed #113, new css style added, permissive file size conjunction
git-svn-id: svn://localhost/orphereus/trunk@744 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/development.ini.template
+++ b/development.ini.template
@@ -37,6 +37,7 @@ core.allowAnonymous = false
 core.allowAnonymousPosting = false
 core.allowRegistration = false
 core.statsCacheTime = 180
+core.permissiveFileSizeConjunction = true
 
 # Board defaults
 defaults.thumbSize = 200
