indexable Posts.parentId, fixed #132
git-svn-id: svn://localhost/orphereus/trunk@810 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/development.ini.template
+++ b/development.ini.template
@@ -50,6 +50,8 @@ defaults.enableSpoilers = false
 defaults.canDeleteOwnThreads = true
 
 # Security settings
+#use this option only with httpd configured as proxy
+security.useXRealIP = false
 security.alertEmail = user1@sms.provider.ru,user2@sms.provider.ru
 security.alertServer = smtp.gmail.com
 security.alertPort = 587
