fixed #151, jquery updated, refs #153
git-svn-id: svn://localhost/orphereus/trunk@919 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/development.ini.template
+++ b/development.ini.template
@@ -24,7 +24,8 @@ core.devMode = true
 core.hashSecret = smallSecret
 core.baseDomain= anoma.ch
 core.minPassLength = 12
-core.uploadPath = /var/OrphieUploads/
+core.uploadPath = /var/www/OrphieUploads/
+core.staticPath = /var/www/OrhpieStatic/
 core.staticPathWeb = http://wut.anoma.ch/
 core.filesPathWeb = http://wut.anoma.ch/img1/
 core.actuator = anomach
