fixed #156, slightly fixed stringToTagList
git-svn-id: svn://localhost/orphereus/trunk@936 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/development.ini.template
+++ b/development.ini.template
@@ -37,6 +37,7 @@ core.allowPosting = true
 core.allowAnonymous = false
 core.allowAnonymousPosting = false
 core.allowRegistration = false
+core.allowAnonProfile = false
 core.statsCacheTime = 180
 core.permissiveFileSizeConjunction = true
 
