--- a/development.ini.template
+++ b/development.ini.template
@@ -40,6 +40,7 @@ core.allowRegistration = false
 core.allowAnonProfile = false
 core.statsCacheTime = 180
 core.permissiveFileSizeConjunction = true
+core.boardWideProoflabels = true
 
 # Board defaults
 defaults.thumbSize = 200
