--- a/development.ini.template
+++ b/development.ini.template
@@ -41,6 +41,10 @@ core.allowAnonymous = false
 core.allowAnonymousPosting = false
 core.allowRegistration = false
 core.allowAnonProfile = false
+core.allowLogin = true
+core.allowCrossposting = true
+core.allowCrosspostingSvc = true
+core.allowTagCreation = true
 core.statsCacheTime = 180
 core.permissiveFileSizeConjunction = true
 core.boardWideProoflabels = true
