finalized localization + javascripts, chan and captcha language selector in profile, added ajax gettext for future use
git-svn-id: svn://localhost/orphereus/trunk@1119 b60fb4c0-664f-0410-90ee-dbbb0efa5d05

--- a/development.ini.template
+++ b/development.ini.template
@@ -62,6 +62,7 @@ core.staticPathWeb = http://wut.anoma.ch/
 core.filesPathWeb = http://wut.anoma.ch/img1/
 core.actuator = anomach
 core.templates = wakaba
+core.languages = en,ru
 core.styles = photon,burichan,gurochan,futaba,kusaba
 core.secondaryIndex = false
 core.vitalSigns = true
