--- a/development.ini.template
+++ b/development.ini.template
@@ -79,6 +79,7 @@ core.allowCrossposting = true
 core.allowCrosspostingSvc = true
 core.allowPureSvcTagline = true
 core.allowTagCreation = true
+core.newsSiteMode = false
 core.statsCacheTime = 180
 core.permissiveFileSizeConjunction = true
 core.boardWideProoflabels = true
