--- a/setup.cfg
+++ b/setup.cfg
@@ -38,22 +38,22 @@ make-dirs=1
 
 # Babel configuration
 [compile_catalog]
-domain = fc
-directory = fc/i18n
+domain = Orphereus
+directory = Orphereus/i18n
 statistics = true
 
 [extract_messages]
 add_comments = TRANSLATORS:
-output_file = fc/i18n/fc.pot
+output_file = Orphereus/i18n/Orphereus.pot
 width = 80
 
 [init_catalog]
-domain = fc
-input_file = fc/i18n/fc.pot
-output_dir = fc/i18n
+domain = Orphereus
+input_file = Orphereus/i18n/Orphereus.pot
+output_dir = Orphereus/i18n
 
 [update_catalog]
-domain = fc
-input_file = fc/i18n/fc.pot
-output_dir = fc/i18n
+domain = Orphereus
+input_file = Orphereus/i18n/Orphereus.pot
+output_dir = Orphereus/i18n
 previous = true
