--- a/development.ini.template
+++ b/development.ini.template
@@ -65,7 +65,7 @@ core.filesPathWeb = http://wut.anoma.ch/img1/
 core.actuator = anomach
 core.templates = wakaba
 core.languages = en,ru
-core.styles = photon,burichan,gurochan,futaba,kusaba
+core.styles = photon_blue,photon,bluemoon,burichan,gurochan,futaba,kusaba
 core.secondaryIndex = false
 core.vitalSigns = true
 core.allowPosting = true
