ALTER TABLE `tagoptions` ADD `showInOverview` TINYINT( 1 ) NOT NULL DEFAULT '1'; ALTER TABLE `tagoptions` ADD `bumplimit` INT( 11 ) NULL ;

--- a/development.ini.template
+++ b/development.ini.template
@@ -109,6 +109,9 @@ defaults.defImages = true
 defaults.defEnableSpoilers = false
 defaults.defCanDeleteOwnThreads = true
 defaults.defSelfModeration = false
+defaults.defShowInOverview = true
+# 0 for unlimited
+defaults.defBumplimit = 0
 
 # Security settings
 #use this option only with httpd configured as proxy
