--- a/development.ini.template
+++ b/development.ini.template
@@ -16,7 +16,7 @@
 #                                                                              #
 #  You should have received a copy of the GNU General Public License           #
 #  along with this program; if not, write to the Free Software                 #
-#  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA. #                                                                         #
+#  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA. #
 ################################################################################
 
 [DEFAULT]
@@ -87,6 +87,7 @@ core.searchPluginId = search_like
 
 
 frontend.invisibleBump = true
+frontend.useZMenu = false
 frontend.useTopPaginator = false
 frontend.usersCanViewLogs = false
 frontend.title = Orphereus
