--- a/development.ini.template
+++ b/development.ini.template
@@ -58,7 +58,6 @@ core.recovery = false
 # for engine init or recovery.  
 
 # Basic IB settings
-core.devMode = false
 # We will hash hashSecret by sha512, so no need to have it long
 core.hashSecret = smallSecret
 core.baseDomain= anoma.ch
@@ -90,6 +89,9 @@ memcache.cachePrefix = ach
 #core.searchPluginId = search_sphinx
 #(see http://www.sphinxsearch.com for information about Sphinx Search Engine)
 
+debug.devMode = false
+debug.requestProfiling = false
+debug.profileDumpFile = /tmp/orphie.perf                         
 
 frontend.invisibleBump = true
 frontend.useZMenu = false
