--- a/development.ini.template
+++ b/development.ini.template
@@ -121,6 +121,7 @@ frontend.maxTagsCount = 5
 frontend.maxTagLen = 6
 frontend.maxLinesInPost  = 15
 frontend.cutSymbols = 5000
+frontend.dvachStyleMenu = true
 
 frontend.disabledTags = logout,authorize,register,youAreBanned,userProfile,holySynod,frameMenu,!
 frontend.adminOnlyTags = synod,logs
