--- a/development.ini.template
+++ b/development.ini.template
@@ -80,10 +80,11 @@ core.allowRegistration = false
 core.allowAnonProfile = false
 core.allowLogin = true
 core.searchPluginId = search_like
-memcache.memcachedPosts = false
 memcache.memcachedServers = 127.0.0.1:11211
+memcache.memcachedPosts = false
 memcache.memcachedBans = false
-memcache.banCacheSeconds = 60
+memcache.memcachedUsers = false
+memcache.banCacheSeconds = 300
 # this prefix is intended to eliminate data collisions in cache 
 # when using single memcached for several Orphereus instances  
 memcache.cachePrefix = ach
